--- a/core/assets/warsmash.ini
+++ b/core/assets/warsmash.ini
@@ -1,21 +1,23 @@
 [DataSources]
-Count=8
+Count=9
 Type00=MPQ
-Path00="C:\Warsmash\Files_1.29.2\Warcraft III\war3.mpq"
+Path00="D:\Development\Guncraft 1.29.2\war3.mpq"
 Type01=MPQ
-Path01="C:\Warsmash\Files_1.29.2\Warcraft III\War3Local.mpq"
+Path01="D:\Development\Guncraft 1.29.2\War3Local.mpq"
 Type02=MPQ
-Path02="C:\Warsmash\Files_1.29.2\Warcraft III\War3x.mpq"
+Path02="D:\Development\Guncraft 1.29.2\War3x.mpq"
 Type03=MPQ
-Path03="C:\Warsmash\Files_1.29.2\Warcraft III\War3xlocal.mpq"
-Type04=Folder
-Path04="..\..\resources"
+Path03="D:\Development\Guncraft 1.29.2\War3xlocal.mpq"
+Type04=MPQ
+Path04="D:\Development\Guncraft 1.29.2\War3mod.mpq"
 Type05=Folder
-Path05="C:\Warsmash\Files_1.29.2\Warcraft III\Maps"
+Path05="..\..\resources"
 Type06=Folder
-Path06="."
+Path06="D:\Development\Guncraft 1.29.2\Maps"
 Type07=Folder
-Path07="C:\Warsmash\Files_1.29.2\Warcraft III\"
+Path07="."
+Type08=Folder
+Path08="D:\Development\Guncraft 1.29.2\"
 
 [GamingNetwork]
 Server=warsmash.net
@@ -24,7 +26,7 @@ Server=warsmash.net
 // Player settings: use 28 for the "24 player" patches,
 // and use 16 for the "12 player" patches, because
 // this constant includes Neutrals
-MaxPlayers=16
+MaxPlayers=28
 
 // Game version:
 //  0: RoC (not well supported)
