Changed filepaths for warsmash.ini

--- a/core/assets/warsmash.ini
+++ b/core/assets/warsmash.ini
@@ -25,7 +25,7 @@ Server=warsmash.net
 [Emulator]
 // Player settings: use 28 for the "24 player" patches,
 // and use 16 for the "12 player" patches, because
-// this constant includes Neutrals
+// this constant includes Neutrals.
 MaxPlayers=28
 
 // Game version:
